# src/app/routes/department-routes.ts
@@ -5,9 +5,9 @@ const router = express.Router();
 
 router.post('/departments', DepartmentController.create);
 router.get('/departments', DepartmentController.findAll);
-router.get('/departments/:department_id', DepartmentController.findById);
-router.put('/departments/:department_id', DepartmentController.update);
+router.get('/departments/:departmentId', DepartmentController.findById);
+router.put('/departments/:departmentId', DepartmentController.update);
 router.delete('/departments', DepartmentController.deleteAll);
-router.delete('/departments/:department_id', DepartmentController.deleteById);
+router.delete('/departments/:departmentId', DepartmentController.deleteById);
 
 export default router;
